# BinPackEx

./: .gitignore  CMakeLists.txt
src/: BinImage.h  BinImageManager.h  BinPacker.h  BinpackMainWindow.cpp  BinpackMainWindow.h  CanvasTestWindow.cpp  CanvasTestWindow.h  ImageCanvas.cpp  ImageCanvas.h  ImageObject.h  ImageObjectExample.h  ImagePathParser.h  Karlsun.h  Logger.h  Receivers.cpp  Receivers.h  SomeWindow.cpp  SomeWindow.h  TestRenderArea.cpp  TestRenderArea.h  Utils.h  eigen_preset.h  main.cpp
